# skinny-orm

./: pyproject.toml  readme.MD  test_skinny_orm.py
skinny_orm/: base_field.py  base_orm.py  exceptions.py  orm.py  sqlite_orm.py
