[tool.poetry]
name = "skinny-orm"
version = "0.1.2"
description = ""
authors = ["Mayas Nova"]
readme = "README.md"
packages = [{include = "skinny_orm"}]

[tool.poetry.dependencies]
python = "^3.9"
dateparser = "^1.1.8"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
